fixato problema di visualizzazione di alcuni elementi in index/navbar non visibili con tema scuro

--- a/WebContent/css/homePage.css
+++ b/WebContent/css/homePage.css
@@ -79,9 +79,11 @@
 	max-height: 150px; 
 }
       
-.carousel-control-next,
-.carousel-control-prev {
-    filter: invert(100%);
+@media (prefers-color-scheme: light) {
+    .carousel-control-next,
+    .carousel-control-prev {
+        filter: invert(100%);
+    }
 }
 
 #wishlist-form button{
